C:/Program Files (x86)/Git/checkout/cart endpoint. Products model
